Remove sun.misc.BASE64Encoder dependency and replace with commons.codec in order to use Base64.encodeBase64